src/pages/leads/Leads.css
.leads-content {
  position: absolute;
  /* margin-top : 400px; */
  padding-top:800px;
  padding-bottom:50px;
  top: 40%;
  left: 50%;
  transform: translate(-50%,-50%);
}

.leads-content h1{
  text-align: center;
  font-size: 5rem;
}

.body-button {
  background-color: rgb(48, 45, 45);
  color: white;
  border-radius: 12px;
  padding: 2%;
  font-size: 0.9rem;
  text-decoration: none;
}

.body-button:hover {
  background-color: rgb(255, 255, 255);
  color: black;
  border: 1px solid red;
}

.leads-table {
  margin-top: 40px;
}

table {
  border-collapse: collapse;
  width: 100%;
}

th,
td {
  text-align: center;
  padding: 8px;
  border-bottom: 1px solid #ddd;
}

th {
  background-color: #f2f2f2;
}

button {
  background-color: transparent;
  border: none;
  outline: none;
  cursor: pointer;
}

button:hover {
  color: #007bff;
}


.popup {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
  align-items: center;
}

.popup-content {
  background-color: white;
  padding: 20px;
  border-radius: 10px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
  max-width: 90%;
  max-height: 90%;
  overflow: auto;
}

.popup-close {
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: transparent;
  border: none;
  font-size: 1.2rem;
  cursor: pointer;
}

